Addes links to footer

--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<h1>Hello World!</h1>
-<body>
-    
-</body>
-<footer>Coded by <a href:"   " ></a>Cozette Gagne, </a>coded on Github> and hosted on Netlify.
-</footer>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=
+  , initial-scale=1.0"
+    />
+    <title>Stargazer Weather App</title>
+  </head>
+  <body>
+    <footer>Coded by <a href="https://github.com/Cozette62">Cozette Gagne</a> on <a href+"https://github.com/Cozette62/stargazer-weather-app">Github</a> and hosted on Nelify.</footer>
+  </body>
 </html>
