Updated footer links

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <title>Stargazer Weather App</title>
   </head>
   <body>
-    <footer>Coded by <a href="https://github.com/Cozette62">Cozette Gagne</a> on <a href+"https://github.com/Cozette62/stargazer-weather-app">Github</a> and hosted on Nelify.</footer>
+    <footer>
+      Coded by <a href="https://github.com/Cozette62">Cozette Gagne</a> on
+      <a href="https://github.com/Cozette62/stargazer-weather-app">Github</a>
+      and hosted on <a href=" ">Nelify</a>.
+    </footer>
   </body>
 </html>
