--- a/index.html
+++ b/index.html
@@ -10,10 +10,34 @@
     <title>Stargazer Weather App</title>
   </head>
   <body>
+    <header>
+      <form>
+        <input type="search" placeholder="Enter a city..." required />
+        <input type="submit" value="Search" />
+      </form>
+    </header>
+
+    <main>
+      <div>
+      <h1>Paris</h1>
+      <p>
+        Tuesday 14:49, scattered clouds
+      </br>
+        Humidity: 66%, Wind: 3.13km/h
+      </p>
+      </div>
+      <div>⛅ 12 degrees C</div>
+    </main>
     <footer>
-      Coded by <a href="https://github.com/Cozette62">Cozette Gagne</a> on
-      <a href="https://github.com/Cozette62/stargazer-weather-app">Github</a>
-      and hosted on <a href=" ">Nelify</a>.
+      This project was coded by
+      <a href="https://github.com/Cozette62" target="_blank">Cozette Gagne,</a>
+      open-sourced on
+      <a
+        href="https://github.com/Cozette62/stargazer-weather-app"
+        target="_blank"
+        >Github</a
+      >
+      and hosted on <a href=" " target="_blank">Netlify</a>.
     </footer>
   </body>
 </html>
