--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
       content="width=
   , initial-scale=1.0"
     />
+    <link rel="stylesheet" href="src/style.css" />
     <title>Stargazer Weather App</title>
   </head>
   <body>
+    <div class="weather-app">
     <header>
       <form>
         <input type="search" placeholder="Enter a city..." required />
@@ -39,5 +41,6 @@
       >
       and hosted on <a href=" " target="_blank">Netlify</a>.
     </footer>
+    </div>
   </body>
 </html>
