--- a/index.html
+++ b/index.html
@@ -2,11 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=
-  , initial-scale=1.0"
-    />
+    <meta name="viewport"
+      content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="src/style.css" />
    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,16 +13,16 @@
   <body>
     <div class="weather-app">
     <header>
-      <form class="search-form">
-        <input type="search" placeholder="Enter a city..." required class="search-form-input"/>
-        <input type="submit" value="Search" class="search-form-button"/>
+      <form class="search-form" id="search-form">
+        <input type="search" placeholder="Enter a city..." required id="search-form-input" class="search-form-input" />
+        <input type="submit" value="Search" class="search-form-button" />
       </form>
     </header>
 
     <main>
       <div class="current-weather-data">
       <div>
-      <h1 class="weather-app-city">Paris</h1>
+      <h1 class="weather-app-city" id="city">Paris</h1>
       <p class="weather-app-details">
         Tuesday 14:49, scattered clouds
       </br>
@@ -52,4 +49,5 @@
     </footer>
     </div>
   </body>
+  <script src="src/index.js"></script>
 </html>
